try to fix cell phone underlined on mobile

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -911,6 +911,7 @@ body {
   align-items: center;
   gap: 8px;
   justify-content: center;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 1049px){
